<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_signup_cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_signup_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_signup_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_signup_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/in_app_logo"
        app:layout_constraintBottom_toTopOf="@id/gl_signup_logo"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="@id/gl_signup_left"
        app:layout_constraintRight_toRightOf="@id/gl_signup_right"
        app:layout_constraintTop_toBottomOf="@id/gl_signup_logo">

        <TextView
            android:id="@+id/tv_signup_signup_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat"
            android:text="@string/signup_static"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_signup_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_signup_signup_static"
            android:layout_marginTop="32dp"
            android:background="@drawable/input_field"
            android:hint="@string/mail_static"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/et_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_signup_mail"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_field"
            android:hint="@string/pwd_static"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btn_signup_submit_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_signup_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_btn"
            android:padding="16dp"
            android:text="@string/signup_static"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_register_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_signup_submit_data"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/crimsonred"
            android:textSize="12sp" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>